[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/tut_textos.gd" type="Script" id=1]
[ext_resource path="res://imgs/mar2-01.png" type="Texture" id=2]
[ext_resource path="res://imgs/tutorial/taptocreatewaves.png" type="Texture" id=3]
[ext_resource path="res://imgs/tutorial/goodluck.png" type="Texture" id=4]
[ext_resource path="res://imgs/tutorial/keepboatsfromcrashing.png" type="Texture" id=5]
[ext_resource path="res://scenes/mouse.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/score.tscn" type="PackedScene" id=7]
[ext_resource path="res://sonidos/mar-playa.ogg" type="AudioStream" id=8]
[ext_resource path="res://sonidos/ukulele tema.ogg" type="AudioStream" id=9]

[node name="tut_textos" type="Node2D"]

script/script = ExtResource( 1 )

[node name="mar2-01" type="Sprite" parent="."]

transform/pos = Vector2( 517.378, 293.199 )
transform/scale = Vector2( 0.590302, 0.590302 )
texture = ExtResource( 2 )

[node name="text_olas" type="Sprite" parent="."]

transform/pos = Vector2( 283.331, 127.685 )
transform/scale = Vector2( 0.333966, 0.333966 )
texture = ExtResource( 3 )

[node name="text_gl" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 266.514, 464.862 )
transform/scale = Vector2( 0.452705, 0.452705 )
z/z = 1
texture = ExtResource( 4 )

[node name="text_rocas" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 302.292, 152.587 )
transform/scale = Vector2( 0.440943, 0.440943 )
texture = ExtResource( 5 )

[node name="mouse" parent="." instance=ExtResource( 6 )]

[node name="score" parent="." instance=ExtResource( 7 )]

[node name="olas" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 8 )
stream/play = false
stream/loop = false
stream/volume_db = 0.00999969
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="ukulele" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 9 )
stream/play = false
stream/loop = false
stream/volume_db = 10.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500


